modify math function

--- a/15131002.md
+++ b/15131002.md
@@ -8,11 +8,11 @@
 
 > 3.1 在一个游戏中，主办方在三个门中任选一个，在门后放了一个奖品，另外两个门之后是空的。选手要在三个门中选择一个抽奖。 当选手选择了一个门，未曾打开门之前，主办方打开了另外两个门中没有奖品的那个门，并向选手说， 他可以改变他的选择，即转为选择剩下一个没有打开的门。 请问，如果选手此时改变选择， 他会提高或降低获奖的可能性么？提高多少？请给出你的分析。 
 
-将三个门编号为为A, B, C，假设选手选择的门为A。在选手第一次做选择的时候，他选到放了奖品的门的概率为$\frac {1}{3}$。在主办方打开了一扇没有奖品的门后概率发生了如下的变化：
+将三个门编号为为A, B, C，假设选手选择的门为A。在选手第一次做选择的时候，他选到放了奖品的门的概率为1/3。在主办方打开了一扇没有奖品的门后概率发生了如下的变化：
 
 - 如果选手不改变选择
 
-  一开始的时候奖品在三个门后面的概率都为$\frac {1}{3}$。
+  一开始的时候奖品在三个门后面的概率都为1/3。
 
   - 如果奖品在A门的后面：此时选手没有换门，所以得到了奖品。
   - 如果奖品在B门的后面：此时主办方打开的门必为C门，而选手没有换门，没有得到奖品。
@@ -20,7 +20,7 @@
 
 - 如果选手改变选择
 
-  同样，一开始的时候奖品在三个门后面的概率都为$\frac {1}{3}$。
+  同样，一开始的时候奖品在三个门后面的概率都为1/3。
 
   - 如果奖品在A门的后面：此时选手选择了换门，所以没有得到奖品。
   - 如果奖品在B门的后面：此时主办方打开的门必为C门，选手选择了换门，得到奖品。
@@ -28,7 +28,7 @@
 
 - 总结
 
-  以上罗列了可能出现的所有情况，选手不改变选择的时候，他能得到奖品的概率只有$\frac {1}{3}$；而选手改变选择的时候，他能得到奖品的概率有$\frac {2}{3}$。所以，如果选手此时改变选择，他能提高获奖的可能性，且能从$\frac {1}{3}$提高到$\frac {2}{3}$。
+  以上罗列了可能出现的所有情况，选手不改变选择的时候，他能得到奖品的概率只有1/3；而选手改变选择的时候，他能得到奖品的概率有2/3。所以，如果选手此时改变选择，他能提高获奖的可能性，且能从1/3提高到2/3。
 
   
 
